package dev.kaldiroglu.dp.structural.adapter.electricity.pluggable.electricity.delegateObject;

public interface TurkishPowerSource {
	
	public void turnOn();
	
	public void turnOff();

}
